updated code wioth all viz

--- a/templates/dataframe.html
+++ b/templates/dataframe.html
@@ -25,5 +25,10 @@
         </tr>
         {% endfor %}
     </table>
+
+    <!-- Add a button to redirect to /getinfo -->
+    <form action="/getinfo">
+        <input type="submit" value="Go to Get Info Page">
+    </form>
 </body>
 </html>
