--- a/templates/index.html
+++ b/templates/index.html
@@ -41,6 +41,25 @@
       width: 100%;
       height: 400px;
     }
+
+    .btn {
+      display: inline-block;
+      padding: 10px 20px;
+      font-size: 16px;
+      cursor: pointer;
+      text-align: center;
+      text-decoration: none;
+      outline: none;
+      color: #fff;
+      background-color: #007BFF;
+      border: none;
+      border-radius: 5px;
+      box-shadow: 0 3px #999;
+    }
+
+    .btn:hover {
+      background-color: #0056b3;
+    }
   </style>
 </head>
 
@@ -54,10 +73,10 @@
   <h2>Summary Statistics</h2>
   {{ results.summary_stats | safe }}
 
- <h2>Skewness Table</h2>
-<div>
-  {{ results.skewness_table_img_base64 | safe }}
-</div>
+  <h2>Skewness Table</h2>
+  <div>
+    {{ results.skewness_table_html | safe }}
+  </div>
 
   <h2>Correlation Matrix Table</h2>
   <div>
@@ -67,37 +86,39 @@
   <h2>Correlation Matrix Heatmap</h2>
   <img src="data:image/png;base64,{{ results.corr_matrix_heatmap_img_base64 }}" alt="Correlation Matrix Heatmap">
 
-  <h2>3D Scatter Plot</h2>
-  <div class="scatter-plot" id="scatter-plot"></div>
+<h2>3D Scatter Plot</h2>
+<div class="scatter-plot" id="scatter-plot"></div>
 
-<script>
-    // Add interactivity using Plotly for the 3D Scatter Plot
-    var trace1 = {
-        x: {{ results.scatter_plot_data.x }},
-        y: {{ results.scatter_plot_data.y }},
-        z: {{ results.scatter_plot_data.z }},
-        mode: 'markers',
-        marker: {
-            size: 12,
-            line: {
-                color: 'rgba(217, 217, 217, 0.14)',
-                width: 0.5
-            },
-            opacity: 0.8
-        },
-        type: 'scatter3d'
-    };
+  <a class="btn" href="/predict">Go to Predict Page</a>
 
-    var layout = {
-        margin: {
-            l: 0,
-            r: 0,
-            b: 0,
-            t: 0
-        }
-    };
+  <script>
+  // Add interactivity using Plotly for the 3D Scatter Plot
+  var trace1 = {
+    x: {{ results.scatter_plot_data.x }},
+    y: {{ results.scatter_plot_data.y }},
+    z: {{ results.scatter_plot_data.z }},
+    mode: 'markers',
+    marker: {
+      size: 12,
+      line: {
+        color: 'rgba(217, 217, 217, 0.14)',
+        width: 0.5
+      },
+      opacity: 0.8
+    },
+    type: 'scatter3d'
+  };
 
-    Plotly.newPlot('scatter-plot', [trace1], layout);
+  var layout = {
+    margin: {
+      l: 0,
+      r: 0,
+      b: 30,
+      t: 0
+    }
+  };
+
+  Plotly.newPlot('scatter-plot', [trace1], layout);
 </script>
 
 </body>
