--- a/templates/dataframe.html
+++ b/templates/dataframe.html
@@ -11,7 +11,8 @@
             width: 90%;
         }
 
-        th, td {
+        th,
+        td {
             border: 3px solid #333;
             padding: 10px;
             text-align: center;
@@ -66,16 +67,17 @@
         }
 
         body {
-            background-color: #7a7a7a; /* Light gray background */
+            background-color: #7a7a7a;
+            /* Light gray background */
             font-family: 'Arial', sans-serif;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
             height: 100vh;
-            margin: 10px; /* Added margin */
+            margin: 10px;
+            /* Added margin */
         }
-
     </style>
 </head>
 
