--- a/templates/home.html
+++ b/templates/home.html
@@ -15,23 +15,28 @@
       justify-content: center;
       height: 100vh;
       margin: 0;
-      overflow: hidden; /* Hide overflow to prevent scrollbar */
+      overflow: hidden;
+      /* Hide overflow to prevent scrollbar */
     }
 
     h1 {
       font-size: 36px;
-      margin-bottom: 20px; /* Add some space below the heading */
+      margin-bottom: 20px;
+      /* Add some space below the heading */
     }
 
     button {
       font-size: 24px;
       padding: 10px 20px;
       background-color: white;
-      color: black; /* Invert the words */
+      color: black;
+      /* Invert the words */
       border: none;
       cursor: pointer;
-      transition: background-color 0.3s ease, color 0.3s ease; /* Smooth transition for hover effect */
-      border-radius: 20px; /* Make the button curvy */
+      transition: background-color 0.3s ease, color 0.3s ease;
+      /* Smooth transition for hover effect */
+      border-radius: 20px;
+      /* Make the button curvy */
     }
 
     button:hover {
@@ -42,7 +47,8 @@
     a {
       color: #007bff;
       text-decoration: none;
-      transition: color 0.3s ease; /* Smooth transition for hover effect */
+      transition: color 0.3s ease;
+      /* Smooth transition for hover effect */
     }
 
     a:hover {
@@ -54,7 +60,8 @@
       position: fixed;
       top: 0;
       left: 0;
-      pointer-events: none; /* Allow clicks to pass through raindrops */
+      pointer-events: none;
+      /* Allow clicks to pass through raindrops */
       width: 100%;
       height: 100%;
       z-index: -1;
@@ -64,7 +71,8 @@
       position: absolute;
       width: 2px;
       height: 10px;
-      background-color: rgba(255, 255, 255, 0.5); /* Semi-transparent white */
+      background-color: rgba(255, 255, 255, 0.5);
+      /* Semi-transparent white */
       animation: fall linear infinite;
     }
 
@@ -81,7 +89,7 @@
   <h1>Data Science Project MTH adv Stats</h1>
   <a href="{{ url_for('display_random_data') }}"><button>Data Set</button></a>
 
- <script>
+  <script>
     // Generate more raindrops dynamically with binary (0s and 1s) and slower fall
     document.addEventListener('DOMContentLoaded', function () {
       const rainContainer = document.querySelector('.rain');
