updated all the code.

--- a/templates/predict.html
+++ b/templates/predict.html
@@ -129,7 +129,7 @@
 
             // Update the Pie Chart with animation
             var pieData = [{
-                labels: ['Predicted % DIABETIC', 'Remaining %'],
+                labels: ['Predicted % DIABETIC', 'Not diabetic %'],
                 values: [predictedDiabetic[0], 100 - predictedDiabetic[0]],
                 type: 'pie'
             }];
